# Primer-Rust-Rocket

./: .gitignore
Web/: Cargo.toml
Web/http_parser/src/: httprequest.rs  httpresponse.rs
Web/httpserver/: Cargo.toml
Web/httpserver/public/: health.html  index.html  style.css
Web/httpserver/src/: handler.rs  router.rs  server.rs
Web/tcpclient/src/: main.rs
Web/tcpserver/src/: main.rs
hello_rocket/: Cargo.toml  Rocket.toml  history.txt
hello_rocket/src/example/: cookie_normal.rs  cookie_private.rs  default_responder.rs  define_excp_handler.rs  define_responder.rs  dyn_path.rs  form.rs  (+11 more)
hello_rocket/static/: index.html
hello_rocket/tests/: static_match.rs
hello_surreal/: Cargo.toml
hello_surreal/src/: main.rs
hello_surreal/src/examples/: 01_connect.rs  02_define_opts.rs  03_create.rs  04_select.rs  05_update.rs  06_delete.rs  07_new.rs  08_init_connect.rs  09_1_sigin_credentials.rs  09_sigin.rs  10_signup.rs  11_authenticate.rs  12_invalidate.rs  13_use.rs  14_query.rs  15_set.rs  16_merge.rs  17_patch.rs
hello_surreal_use/: Cargo.toml  surrealdb.config.json
hello_surreal_use/src/: main.rs
hello_surreal_use/src/examples/: 01_test_parse_config.rs  02_select_all.rs
surreal_use/: Cargo.toml  README.md  surrealdb.config.json
surreal_use/src/: lib.rs
surreal_use/src/config/: auth.rs  mod.rs  parser.rs
surreal_use/src/core/: create.rs  delete.rs  insert.rs  mod.rs  select.rs  stmt.rs  update.rs  use.rs
surreal_use/src/core/sql/: cond.rs  create.rs  edges.rs  field.rs  insert.rs  mod.rs  order.rs  patch.rs  set_field.rs  table.rs  update.rs
(+4 files in other folders)
