[package]
name = "surreal_use"
version = "0.1.0"
edition = "2021"
description = "An extension library based on the Surrealdb library to help users develop more conveniently"
authors = ["syf20020816@outlook.com"]
license = "MIT"
repository = "https://github.com/Surrealism-All/surreal_use"
keywords = ["surreal","surreal_db","sql"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
surrealdb = "1.1.0"
